# Machine-Learning-Foundations

./: .gitignore  intropan.py  pyproject.toml
Pre Machine Learning/: previsao_de_cliente.py
practicing pandas/: intropan.py  panda_exercises.py
